# RestAPI-HW

./: .env.example  .pre-commit-config.yaml  README.md  alembic.ini  database.db  docker-compose.yml  pyproject.toml  requirements.txt
blog_system/src/: __init__.py  app.py  security.py
blog_system/src/api/: __init__.py
blog_system/src/db/: __init__.py  ddl.sql  deps.py  mixins.py  models.py
blog_system_backend/: Dockerfile  __init__.py
blog_system_backend/cli/: __main__.py  app.py
blog_system_backend/cli/admin/: __init__.py  app.py  service.py
blog_system_backend/migrations/: env.py
blog_system_backend/migrations/versions/: 30dbe9b48386_add_comment.py  75c45e8d84be_add_saved_post.py  b364c310aeb2_add_subscribes.py  cde2df35f8a9_add_user_role.py  ce3b124919d4_init_migration.py  dad567f47e25_category.py
blog_system_backend/src/: app.py  security.py  settings.py
blog_system_backend/src/api/: __init__.py
blog_system_backend/src/db/: __init__.py  deps.py  models.py
blog_system_backend/src/pagination/: __init__.py  deps.py  fields.py  schemas.py
blog_system_backend/tests/: conftest.py
blog_system_backend/tests/integration/: test_docs.py
blog_system_frontend/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
blog_system_frontend/src/: App.tsx  index.css
blog_system_frontend/src/components/: AuthorInfo.tsx  Comments.tsx  Header.tsx  Layout.tsx  PostCard.tsx  ProtectedRoute.tsx
blog_system_frontend/src/contexts/: AuthContext.test.tsx  AuthContext.tsx  ThemeContext.test.tsx  ThemeContext.tsx
blog_system_frontend/src/hooks/: useAuth.test.tsx  useAuth.ts  useCategories.test.tsx  useCategories.ts  useComments.test.tsx  useComments.ts  usePosts.test.tsx  usePosts.ts  useUsers.test.tsx  useUsers.ts
blog_system_frontend/src/mocks/: data.ts  services.ts
blog_system_frontend/src/pages/: Favorites.tsx  Home.tsx  Login.tsx  NotFound.tsx  PostCreate.tsx  PostDetails.tsx  PostEdit.tsx  Register.tsx  (+6 more)
src/: __init__.py  app.py
src/api/: __init__.py
src/db/: __init__.py  deps.py  models.py
(+90 files in other folders)
