[project]
name = "blog_system_backend"
version = "0.1.0"
description = "Система для веденяия блога"
authors = [{ name = "mysthz", email = "mchokopayeva@mail.ru" }]

requires-python = ">=3.12"
dependencies = [
    "fastapi==0.119.0",
    "pydantic[email]==2.12.2",
    "uvicorn==0.37.0",
    "sqlalchemy==2.0.44",
    "passlib==1.7.4",
    "ruff==0.14.0",
    "mypy==1.18.2",
    "bcrypt==4.0.1",
    "pre-commit (>=4.3.0,<5.0.0)",
    "types-passlib (>=1.7.7.20250602,<2.0.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "pyjwt (==2.10.1)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "typer (>=0.20.0,<0.21.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cli = "blog_system_backend.cli.app:app"


[tool.mypy]
files = [
    "blog_system_backend",
]
strict = true

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"